# diff_game

./: INSTALL.markdown  README.markdown  diff_game.cabal
src/: Game.hs  Main.hs  MainCLI.hs
src/gui/: MainWindow.glade
