-- General information
Name:                DiffGame
Version:             0.0
Author:              Nick Kudasov
Maintainer:          crazy.fizruk@gmail.com
Stability:           Experimental
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Data-Files: gui/MainWindow.glade
Data-Dir:   src


Executable diff_game
   Build-Depends:  base >= 4 && < 5, gtk, glade
   Hs-Source-Dirs: src
   Main-Is: Main.hs

Executable diff_game_cli
   Build-Depends:  base >= 4 && < 5
   Hs-Source-Dirs: src
   Main-Is: MainCLI.hs
